[project]
name = "user-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (==1.16.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "argon2-cffi (==23.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "asyncpg (==0.30.0)",
    "bcrypt (==4.3.0)",
    "black (==25.1.0)",
    "cffi (==1.17.1)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "cryptography (==45.0.3)",
    "dnspython (==2.7.0)",
    "dotenv (==0.9.9)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.12)",
    "fastapi-users (==14.0.1)",
    "fastapi-users-db-sqlalchemy (==7.0.0)",
    "greenlet (==3.2.2)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "makefun (==1.16.0)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pwdlib (==0.2.1)",
    "pycparser (==2.22)",
    "pydantic (==2.11.5)",
    "pydantic-settings (==2.9.1)",
    "pydantic-core (==2.33.2)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.1.0)",
    "python-multipart (==0.0.20)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "uuid (==1.30)",
    "uvicorn (==0.34.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
